--- a/src/components/TaskBar.style.module.css
+++ b/src/components/TaskBar.style.module.css
@@ -13,8 +13,8 @@
   justify-content: space-between;
   align-items: center;
 
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
 
   /* Add additional styling as needed */
 }
@@ -29,7 +29,7 @@
   width: 50%;
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 40px;
 }
 
 .startIcons {
@@ -38,6 +38,8 @@
 }
 
 .endIcons {
+  display: flex;
+  justify-content: end;
   width: 25%;
   gap: 40px;
 }
