--- a/src/components/MainWindows.style.module.css
+++ b/src/components/MainWindows.style.module.css
@@ -25,8 +25,11 @@
   display: flex;
   flex-direction: column;
   /* border: 1px solid red; */
-  width: 1000px;
-  height: 600px;
+  /* width: 1000px; */
+  /* height: 650px; */
+  width: 60%;
+  min-width: 500px;
+  height: 70%;
 }
 
 .tabContainer {
@@ -48,11 +51,12 @@
   border-left: 2px solid rgba(54, 29, 199, 1);
   border-right: 2px solid rgba(54, 29, 199, 1);
   margin-right: 4px;
+  cursor: pointer;
 }
 
 .inactiveTab {
   background-color: #d5a2d9;
-  z-index: -1;
+  z-index: 0;
 }
 
 .tabOption h2 {
