--- a/src/components/Card.style.module.css
+++ b/src/components/Card.style.module.css
@@ -24,6 +24,9 @@
   border: 2px solid rgba(54, 29, 199, 1);
   margin: 0px 15px 15px 15px;
   height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .windowTitle {
