changed css modules

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-} */
+@import "./assets/styles/normalizer.css";
+@import "./assets/styles/reset.css";
 
 :root {
   background-color: rgba(129, 121, 255, 0.78);
