--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,6 @@
 
 :root {
   background-color: rgba(129, 121, 255, 0.78);
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   background-image: linear-gradient(
       to right,
       rgba(201, 233, 246, 0.3) 2px,
@@ -14,4 +10,7 @@
     ),
     linear-gradient(to bottom, rgba(201, 233, 246, 0.3) 2px, transparent 1px);
   background-size: 100px 100px; /* Adjust the grid size as needed */
+  overflow: hidden;
+  top: 0;
+  left: 0;
 }
