--- a/src/components/mainWindow/MainWindows.css
+++ b/src/components/mainWindow/MainWindows.css
@@ -1,4 +1,12 @@
-.main-window-container {
+.mainWindowContainer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  min-width: 500px;
+  height: 70%;
+  z-index: 1;
+
   .content {
     display: flex;
     flex-direction: column;
@@ -19,15 +27,6 @@
   .subContentHeader {
     display: flex;
     height: 90px;
-  }
-
-  .container {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    width: 60%;
-    min-width: 500px;
-    height: 70%;
   }
 
   .tabContainer {
