--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
     linear-gradient(to bottom, rgba(201, 233, 246, 0.3) 2px, transparent 1px);
   background-size: 100px 100px; /* Adjust the grid size as needed */
   overflow: hidden;
-  top: 0;
-  left: 0;
+
+  .appContainer {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+  }
 }
